@@ -1,38 +1,84 @@
 module com.example.demo1 {
-    requires javafx.base;
+
+    // ================================================
+    // JAVAFX
+    // ================================================
     requires javafx.controls;
     requires javafx.fxml;
     requires javafx.web;
     requires javafx.graphics;
+    requires javafx.swing;
+    requires javafx.media;
+    requires jdk.jsobject;
+    requires jbcrypt;
+
+    // ================================================
+    // JAVA STANDARD
+    // ================================================
     requires java.sql;
-    requires jakarta.mail;
-    requires java.net.http; // <-- pour HttpClient
-    requires com.google.gson;  // ← Ajoute cette ligne
+    requires java.desktop;
+    requires java.net.http;
+    //requires java.mail;
+    requires itextpdf;
+//    requires com.itextpdf ;
+    // ================================================
+    // TWILIO ✅ — module name correct pour 10.1.0
+    // ================================================
+//    requires twilio;
+    requires transitive twilio;
+
+    // ================================================
+    // JSON & HTTP
+    // ================================================
+    requires com.google.gson;
+    requires okhttp3;
+    requires org.json;
+
+    // ================================================
+    // QR CODE
+    // ================================================
     requires com.google.zxing;
     requires com.google.zxing.javase;
 
-    opens com.example.demo1.entity to javafx.base, com.fasterxml.jackson.databind; // Pour TableView et Jackson
-    requires okhttp3;              // ← Ajoute cette ligne
+    // ================================================
+    // JACKSON (pour CurrencyService si utilisé)
+    // ================================================
+    requires com.fasterxml.jackson.databind;
+    requires com.fasterxml.jackson.datatype.jsr310;
 
+    // ================================================
+    // UI EXTRAS
+    // ================================================
     requires org.controlsfx.controls;
     requires com.dlsc.formsfx;
     requires net.synedra.validatorfx;
-    requires com.fasterxml.jackson.databind;
-    requires com.fasterxml.jackson.datatype.jsr310;
-    // Note: BCrypt is a non-modular JAR, requires --add-reads JVM argument
-
-//    requires org.kordamp.ikonli.javafx;
-//    requires org.kordamp.bootstrapfx.core;
-//    requires eu.hansolo.tilesfx;
-//    requires com.almasb.fxgl.all;
-
+    requires jakarta.mail;
+    // ================================================
+    // OPENS — JavaFX FXML accès aux controllers
+    // ================================================
     opens com.example.demo1 to javafx.fxml;
     opens com.example.demo1.controller to javafx.fxml;
     opens com.example.demo1.controller.authentification to javafx.fxml;
     opens com.example.demo1.controller.client to javafx.fxml;
     opens com.example.demo1.controller.admin to javafx.fxml;
-//    opens com.example.demo1.service to javafx.fxml; // si tu veux accéder aux services via FXML
 
+    // ================================================
+    // OPENS — Entités pour TableView + Jackson + Gson
+    // ================================================
+    opens com.example.demo1.entity to
+            javafx.base,
+            com.fasterxml.jackson.databind,
+            com.google.gson;
+
+    // ================================================
+    // OPENS — autres packages si nécessaire
+    // ================================================
+    opens org.example.controllers to javafx.fxml;
+    opens org.example.entities to javafx.base;
+
+    // ================================================
+    // EXPORTS
+    // ================================================
     exports com.example.demo1;
     exports com.example.demo1.services;
 }
